plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.1'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.lukegjpotter.tools'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
    implementation 'org.seleniumhq.selenium:selenium-java:4.9.0'
    implementation 'io.github.bonigarcia:webdrivermanager:5.4.0'
    implementation 'com.opencsv:opencsv:5.7.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

// Remove the *-plain.jar file from being created.
jar {
    enabled = false
}